# SplineLib

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  README.md  STYLEGUIDE.md
.devcontainer/: Dockerfile  devcontainer.json  reinstall-cmake.sh
.github/workflows/: cmake.yml
CMake/: config.cmake.in
Examples/Evaluation/: CMakeLists.txt  evaluation.cpp
Python/: CMakeLists.txt
Python/Pybind/Sources/: CMakeLists.txt  splinelyp.cpp
Python/Pybind/Tests/: CMakeLists.txt  test_splinelyp.py
Python/Sources/: CMakeLists.txt  b_spline_binding.hpp  b_spline_binding.inc  knot_vector_binding.cpp  knot_vector_binding.hpp  nurbs_binding.hpp  nurbs_binding.inc  parameter_space_binding.hpp  parameter_space_binding.inc  spline_binding.hpp  spline_binding.inc  vector_space_binding.hpp  vector_space_binding.inc  weighted_vector_space_binding.hpp  weighted_vector_space_binding.inc
Python/Tests/: CMakeLists.txt  b_spline_binding_test.cpp  nurbs_binding_test.cpp
Scripts/Spack/splinelib/: repo.yaml
Sources/: CMakeLists.txt
Sources/InputOutput/: CMakeLists.txt  iges.cpp  irit.cpp  operations.hpp  operations.inc  vtk.cpp  vtk.hpp  xml.cpp
Sources/Models/: rectangular.hpp  rectangular.inc
Sources/ParameterSpaces/: CMakeLists.txt  b_spline_basis_function.hpp  knot_vector.cpp  knot_vector.hpp  non_zero_degree_b_spline_basis_function.hpp  parameter_space.hpp  parameter_space.inc  zero_degree_b_spline_basis_function.cpp
Sources/Splines/: CMakeLists.txt  b_spline.hpp  b_spline.inc  nurbs.hpp  nurbs.inc  spline.hpp  spline.inc  spline_item.hpp
Sources/Utilities/: error_handling.hpp  index.hpp  index.inc  math_operations.cpp  named_type.hpp  named_type.inc  numeric_operations.hpp  numeric_operations.inc  std_container_operations.hpp  std_container_operations.inc  string_operations.hpp  string_operations.inc  system_operations.hpp
Sources/VectorSpaces/: CMakeLists.txt  vector_space.hpp  vector_space.inc  weighted_vector_space.hpp  weighted_vector_space.inc
Tests/: CMakeLists.txt
Tests/InputOutput/: CMakeLists.txt  config_iges.in.hpp  config_irit.in.hpp  config_xml.in.hpp  iges_test.cpp  irit_test.cpp  operations_test.cpp  test_one.iges  test_two.iges  vtk_test.cpp  xml_test.cpp
Tests/Models/: CMakeLists.txt  rectangular_test.cpp
Tests/ParameterSpaces/: CMakeLists.txt  b_spline_basis_function_mock.cpp  b_spline_basis_function_mock.hpp  b_spline_basis_function_test.cpp  knot_vector_mock.cpp  knot_vector_mock.hpp  knot_vector_test.cpp  non_zero_degree_b_spline_basis_function_mock.cpp  non_zero_degree_b_spline_basis_function_mock.hpp  non_zero_degree_b_spline_basis_function_test.cpp  parameter_space_2d.cpp  parameter_space_2d.hpp  parameter_space_mock.cpp  parameter_space_mock.hpp  parameter_space_test.cpp  zero_degree_b_spline_basis_function_mock.cpp  zero_degree_b_spline_basis_function_mock.hpp  zero_degree_b_spline_basis_function_test.cpp
Tests/Splines/: CMakeLists.txt  b_spline_mock.cpp  b_spline_mock.hpp  b_spline_test.cpp  nurbs_2d_to_3d.cpp  nurbs_2d_to_3d.hpp  nurbs_mock.cpp  nurbs_mock.hpp  nurbs_test.cpp  spline_item_mock.cpp  spline_item_mock.hpp  spline_item_test.cpp  spline_test.cpp
Tests/Utilities/: CMakeLists.txt  error_handling_test.cpp  index_mock.cpp  index_mock.hpp  index_test.cpp  math_operations_test.cpp  named_type_test.cpp  numeric_operations_test.cpp  std_container_operations_test.cpp  string_operations_test.cpp  system_operations_test.cpp
Tests/VectorSpaces/: CMakeLists.txt  vector_space_mock.cpp  vector_space_mock.hpp  vector_space_test.cpp  weighted_vector_space_3d.cpp  weighted_vector_space_3d.hpp  weighted_vector_space_mock.cpp  weighted_vector_space_mock.hpp  weighted_vector_space_test.cpp
Tools/: CMakeLists.txt
Tools/Sources/: CMakeLists.txt  converter.cpp  log_operations.cpp  log_operations.hpp  log_operations.inc  sampler.cpp
Tools/Tests/: CMakeLists.txt  config_log.in.hpp  log_operations_test.cpp  test.xml
Uml/: splinelib.uxf  splinelib.xml
Uml/InputOutput/: input_output.uxf
Uml/Models/: models.xml
Uml/ParameterSpaces/: b_spline_basis_functions.uxf  b_spline_basis_functions.xml  knot_vector.uxf  knot_vector.xml  parameter_space.uxf  parameter_space.xml  parameter_spaces.uxf  parameter_spaces.xml
Uml/Splines/: spline_item.uxf  spline_item.xml  splines.uxf  splines.xml
Uml/Utilities/: index.uxf  index.xml  named_type.uxf  named_type.xml  utilities.uxf  utilities.xml
Uml/VectorSpaces/: vector_space.uxf  vector_space.xml  vector_spaces.uxf  vector_spaces.xml
